Funcionamiento finalizado se cambiaron los tipos de usuario modificaciones a la base de datos
